Simpler solution